# fcore

./: .ghci  .gitignore  .hgignore  .travis.yml  AUTHORS.txt  Guardfile  LICENSE  Makefile  README.md  Rakefile  cabal.config  f2j.html  fcore.cabal  index.html  params.json  project.html  run-spec.sh  select-cabal.sh  stack.yaml  systemfcompiler.cabal.ghc-7.6.3  systemfcompiler.cabal.ghc-7.8.3
backend/: ApplyTransCFJava.hs  BenchGenCF2J.hs  BenchGenStack.hs  ClosureF.hs  Core.hs  Playground.hs
backend/archive/: ClosureFNew.hs  CoreNew.hs
compiler/: .#Translations.hs  ApplyTransCFJava.hs  ApplyTransCFJava2.hs  Assertions.hs  BaseTransCFJava.hs  BenchGenCF2J.hs  BenchGenStack.hs  CPS.hs  ClosureF.hs  Compilations.hs  Config.hs  Core.hs  DeInter.hs  Delazy.hs  Desugar.hs  Environment.hs  Examples.hs  FileIO.hs  FileLoad.hs  FileServer.java  Generated.java  HM.hs  HMLexer.x  HMParser.y  HMSyntax.hs  HMTokens.hs  History.hs  IOEnv.hs  Inheritance.hs  Inliner.hs  JVMTypeQuery.hs  JavaEDSL.hs  JavaUtils.hs  JvmTypeQuery.hs  Lexer.x  Link.hs  Loop.hs  M4.sf  Main.hs  Makefile  (+59 more)
compiler/ESF/: Lexer.x  Parser.y  Syntax.hs  Translation.hs  TypeCheck.hs
compiler/HM/: HM.hs  HMLexer.hs  HMParser.hs  HMParser.y  Lexer.x  Parser.y  Pretty.hs  Syntax.hs  TypeChecker.hs
compiler/Java/: Utils.hs
compiler/Language/: ESF.hs  HM.hs  SystemF.hs  TransESF.hs  TransESFSystemF.hs
compiler/Src/: Lexer.x  Parser.y  Syntax.hs  TypeCheck.hs
compiler/SystemF/: Lexer.x  Parser.y  ParserSpec.hs  Pretty.hs  PrettySpec.hs  Spec.hs  Syntax.hs  SystemFLexer.hs  SystemFParser.hs  SystemFParser.y  TypeCheck.hs  TypeInference.hs  TypeInferer.hs
compiler/SystemFI/: Syntax.hs  TypeCheck.hs
compiler/lib/: PlotWindow.java
css/: bootstrap.css  modern-business.css
doc/: README.md  cheatsheet.md  trait.txt  tutorial.md
doc/spec/: expressions.md  modules.md  nominal-subtyping.md
doc/src/: EvenOdd.sf  OverloadedOperator.sf  Poly.sf
docs/: Rakefile
docs/src/: Interop.sf  Manhattan.sf  Poly.sf
examples/: Apply.java  Apply.sf  ArrayList.sf  BlockComment.sf  Bob.java  Bob.sf  BoundedPoly.sf  Bug.java  CallByName.java  CallByName.sf  ChainingMethods.java  ChainingMethods.sf  Datatype.sf  DuplicateLabels.sf  EP.sf  EP2.sf  ExtraCommas.sf  FoldLeft.java  Id.java  Id.sf  ImplicitMixin.sf  Issue_185.sf  Issue_185_NoTApp.sf  Issue_190.sf  Issue_191.sf  Issue_192.sf  Issue_27.sf  LazyAdd.sf  M1.sf  M2.sf  M3.sf  M4.sf  M5.sf  Mini_ADT.sf  Mixin.sf  Module.java  Module.sf  Module2.java  Module2.sf  ObjectAlgebra.java  (+34 more)
examples/caseStudies/: AmortizedQueue.sf  AssociativeList.sf  FOLogic.hs  FOLogic.leon  FOLogic.sf  FeatherWeightJava.hs  FeatherWeightJava.sf  FoldAssociative.sf  HeapSort.hs  HeapSort.sf  InsertionSort.sf  ListOpertaions.sf  MergeSort.sf  Monad3.sf  ParBalance.hs  ParBalance.sf  PropositionalLogic.sf  PureLambda.hs  PureLambda.sf  RedBlackTree.hs  RedBlackTree.sf  SearchLinkedList.hs  SearchLinkedList.sf  SumAndMax.sf
examples/case_studies/: AmortizedQueue.sf  FOLogic.leon  FOLogic.sf  FeatherWeightJava.hs  FoldAssociative.sf  HeapSort.sf  InsertionSort.sf  ListOpertaions.sf  Monad3.sf  PropositionalLogic.sf  PureLambda.hs  RedBlackTree.hs  RedBlackTree.sf  SumAndMax.sf
examples/cps_knapsack/: CpsKnapsack.sf  Makefile  cps_knapsack.sf
examples/datatype/: Append.sf  Avl.sf  Issue.76.sf  Mutual_count_nil.sf  Mutual_map_node.sf  Mutual_size.sf  Pair.sf  Reverse.sf  Sort.sf  isNil.sf  is_nil.sf  is_prefix.sf  reverse.sf  sort.sf
examples/decl-syntax/: EvenOdd.sf
examples/declaration_syntax/: EvenOdd.sf
examples/declsyntax/: EvenOdd.sf
examples/disjoint/: test1.sf  test10.sf  test11.sf  test2.sf  test3.sf  test4.sf  test5.sf  test6.sf  test7.sf  test8.sf  test9.sf
examples/fractals/: Fractals.sf  Makefile  fractals.sf
examples/list/: At.sf  Drop.sf  Filter.sf  Foldl.sf  Foldr.sf  Map.sf  Take.sf  at.sf  drop.sf  filter.sf  foldl.sf  foldr.sf  length.sf  map.sf  take.sf
examples/module/: M1.sf  M2.sf  M3.sf  M4.sf  M5.sf  m1.sf
examples/object_algebra/: ObjectAlgebra2.sf  ObjectAlgebra_ExpAlg.sf  ObjectAlgebra_SybAlg.sf
examples/sierpinsky/: Makefile  Sierpinsky.sf  sierpinsky.sf
examples/state_monad/: Makefile  StateMonad.sf  StateMonad2.sf  State_monad.java  state_monad.sf  state_monad2.sf
examples/traits/: README.md  comment.sf  point.sf
frontend/: Config.hs  Desugar.hs  Examples.hs  FileIO.hs  FrontEnd.hs  JavaEDSL.hs  JavaUtils.hs  Lab.hs  Link.hs  Loop.hs  Src.hs  SymbolicEvaluator.hs  SystemFI.hs  Test.hs  TestInh.hs  UnboxTransCFJava.hs  Z3Backend.hs  Z3ModelParser.hs
frontend/abstractsyntax/: Src.hs  SrcLoc.hs
frontend/newlib/: BaseTrans.hs
frontend/parse/: Lexer.x  Makefile  Parser.y
frontend/simplify/: Simplify.hs  SimplifyImpl.hs
frontend/typeCheck/: Checker.hs  Problem.hs
frontend/typecheck/: Checker.hs  JvmTypeQuery.hs  TypeCheck.hs  TypeErrors.hs
interpreter/: FileServer.java  Main.hs
lib/: ApplyTransCFJava.hs  Assertions.hs  BackEnd.hs  BaseTransCFJava.hs  BaseTransCFJavaNew.hs  BenchGenStack.hs  CPS.hs  Client.hs  ClosureF.hs  ClosureFNew.hs  Config.hs  Core.hs  CoreNew.hs  Delazy.hs  Desugar.hs  Environment.hs  Examples.hs  FileIO.hs  FileLoad.hs  FrontEnd.hs  History.hs  IOEnv.hs  ImplicitMixin.sf  Inliner.hs  JavaEDSL.hs  JavaUtils.hs  JvmTypeQuery.hs  Lexer.x  Link.hs  Loop.hs  M5.sf  Mixin.java  Mixin.sf  Mixin2.sf  MonadLib.hs  OptiUtils.hs  Panic.hs  ParseCMD.hs  Parser.y  PartialEvaluator.hs  (+15 more)
repl/: Environment.hs  History.hs  Loop.hs  Main.hs
runtime/: build.xml
systemf/: SystemF.hs  build.sbt
testsuite/: CoreSpec.hs  Fact.java  Fibo.java  FileLoad.hs  Interfact.java  ModuleSpec.hs  Mutual2.java  Mutualrec2.sf  Mutualrec3.sf  ParserSpec.hs  Products.sf  Products3.sf  Products4.sf  README.md  Spec.hs  SpecHelper.hs  SystemFISpec.hs  Tailfact.java  Test.hs  TestTerms.hs  TransCFSpec.hs  TypeCheckSpec.hs  always_true.sf  even_odd.sf  fact.ml  fact.sf  fact_java.sf  fibo.ml  fibo.sf  hello_world.sf  id.java  id.ml  id.sf  interfact.ml  interfact.sf  lit_java.sf  mutual.java  mutual.sf  mutual2.sf  mutualrec.sf  (+5 more)
(+395 files in other folders)
