name:                   fcore
version:                0.1.0
cabal-version:          >= 1.8
build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              (c) 2014—2015 The F2J Project Developers (given in AUTHORS.txt)
category:               Language
stability:              experimental
tested-with:            GHC == 7.8.3
data-files:             runtime/runtime.jar

library
  default-language:     Haskell2010
  build-depends:        ansi-wl-pprint == 0.6.*
                      , array == 0.5.*
                      , base == 4.*
                      , bytestring == 0.10.*
                      , cmdargs == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , file-embed == 0.0.7
                      , filepath == 1.3.*
                      , haskeline == 0.7.*
                      , language-java == 0.2.*
                      , mtl == 2.1.*
                      , network == 2.5.*
                      , parsec == 3.1.*
                      , pretty == 1.1.*
                      , process == 1.2.*
                      , split == 0.2.*
                      , template-haskell == 2.9.*
                      , time == 1.4.*
                      , timeit == 1.0.*
                      , transformers == 0.3.*
  build-tools:          alex == 3.1.*,
                        happy == 1.19.*
  hs-source-dirs:       lib,lib/simplify
  exposed-modules:      ApplyTransCFJava
                        BaseTransCFJava
                        BenchGenCF2J
                        BenchGenStack
                        Client
                        ClosureF
                        Config
                        Core
                        Desugar
                        Environment
                        FileIO
                        History
                        IOEnv
                        Inheritance
                        Inliner
                        JavaEDSL
                        JavaUtils
                        JvmTypeQuery
                        Lexer
                        Link
                        Loop
                        Mixin
                        MonadLib
                        OptiUtils
                        Panic
                        ParseCMD
                        Parser
                        PartialEvaluator
                        PrettyUtils
                        Simplify
                        Src
                        SrcLoc
                        StackTransCFJava
                        StaticAssert
                        StringPrefixes
                        StringUtils
                        SystemFI
                        TestInh
                        Translations
                        TypeCheck
  other-modules:        SimplifyImpl
  if flag(Z3)
                        exposed-modules: SymbolicEvaluator, Z3Backend
                        build-depends: z3 >= 0.3.2
                        cpp-options: -DZ3

executable f2j
  default-language:     Haskell2010
  hs-source-dirs:       compiler
  main-is:              Main.hs
  build-depends:        fcore
                      , ansi-wl-pprint == 0.6.*
                      , array == 0.5.*
                      , base == 4.*
                      , bytestring == 0.10.*
                      , clock == 0.4.1.*
                      , cmdargs == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , file-embed == 0.0.7
                      , filepath == 1.3.*
                      , haskeline == 0.7.*
                      , language-java == 0.2.*
                      , mtl == 2.1.*
                      , network == 2.5.*
                      , parsec == 3.1.*
                      , pretty == 1.1.*
                      , process == 1.2.*
                      , split == 0.2.*
                      , template-haskell == 2.9.*
                      , time == 1.4.*
                      , timeit == 1.0.*
                      , transformers == 0.3.*
  ghc-options:          -Wall
                        -fno-warn-missing-signatures
                        -fno-warn-name-shadowing
                        -fno-warn-unused-binds
                        -fno-warn-unused-matches

Flag Z3
  description: SMT solver for symbolic evaluator
  default: False

executable f2ji
  default-language:     Haskell2010
  hs-source-dirs:       interpreter
  main-is:              Main.hs
  build-depends:        fcore
                      , ansi-wl-pprint == 0.6.*
                      , array == 0.5.*
                      , base == 4.*
                      , bytestring == 0.10.*
                      , cmdargs == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , file-embed == 0.0.7
                      , filepath == 1.3.*
                      , haskeline == 0.7.*
                      , language-java == 0.2.*
                      , mtl == 2.1.*
                      , network == 2.5.*
                      , parsec == 3.1.*
                      , pretty == 1.1.*
                      , process == 1.2.*
                      , split == 0.2.*
                      , template-haskell == 2.9.*
                      , time == 1.4.*
                      , timeit == 1.0.*
                      , transformers == 0.3.*
  ghc-options:          -Wall
                        -fno-warn-missing-signatures
                        -fno-warn-name-shadowing
                        -fno-warn-unused-binds
                        -fno-warn-unused-matches

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       testsuite,testsuite/tests
  main-is:              Test.hs
  build-depends:        fcore
                      , base == 4.*
                      , containers == 0.5.*
                      , tasty == 0.10.*
                      , tasty-hunit == 0.9.*
