name:                   fcore
version:                0.1.0
cabal-version:          >= 1.10
build-type:             Simple
license:                BSD3
license-file:           LICENSE
copyright:              (c) 2014—2015 The F2J Project Developers (given in AUTHORS.txt)
category:               Language
stability:              experimental
tested-with:            GHC == 7.10.2
data-files:             runtime/runtime.jar

source-repository head
    type:     git
    location: git://github.com:hkuplg/fcore.git

library
  default-language:     Haskell2010
  build-depends:        ansi-wl-pprint == 0.6.*
                      , array == 0.5.*
                      , base == 4.*
                      , bytestring == 0.10.*
                      , cmdargs == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , extra == 1.4.*
                      , filepath == 1.4.*
                      , haskeline == 0.7.*
                      , language-java == 0.2.*
                      , mtl == 2.2.*
                      , network == 2.6.*
                      , parsec == 3.1.*
                      , pretty == 1.1.*
                      , process == 1.2.*
                      , split == 0.2.*
                      , template-haskell == 2.10.*
                      , time == 1.5.*
                      , transformers == 0.4.*
  build-tools:          alex == 3.1.*,
                        happy == 1.19.*
  hs-source-dirs:       lib,lib/services,lib/typeCheck,lib/simplify,repl
  exposed-modules:      ApplyTransCFJava
                        BackEnd
                        BaseTransCFJava
                        ClosureF
                        Config
                        Core
                        Desugar
                        Environment
                        FileIO
                        FrontEnd
                        History
                        IOEnv
                        Inheritance
                        Inliner
                        JavaEDSL
                        JavaUtils
                        JvmTypeQuery
                        Lexer
                        Loop
                        Mixin
                        MonadLib
                        OptiUtils
                        Panic
                        ParseCMD
                        Parser
                        PartialEvaluator
                        Predef
                        PrettyUtils
                        RuntimeProcessManager
                        Simplify
                        Src
                        SrcLoc
                        StackTransCFJava
                        StaticAssert
                        StringPrefixes
                        StringUtils
                        SystemFI
                        TestInh
                        TypeCheck
  other-modules:        SimplifyImpl Paths_fcore
  if flag(Z3)
                        exposed-modules: SymbolicEvaluator, Z3Backend, Z3ModelParser
                        build-depends: z3 > 0.3.2
                        cpp-options: -DZ3

executable f2j
  default-language:     Haskell2010
  hs-source-dirs:       compiler
  main-is:              Main.hs
  build-depends:        ansi-wl-pprint == 0.6.*
                      , array == 0.5.*
                      , base == 4.*
                      , bytestring == 0.10.*
                      , clock == 0.5.*
                      , cmdargs == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , fcore
                      , filepath == 1.4.*
                      , haskeline == 0.7.*
                      , language-java == 0.2.*
                      , mtl == 2.2.*
                      , network == 2.6.*
                      , optparse-applicative
                      , parsec == 3.1.*
                      , pretty == 1.1.*
                      , process == 1.2.*
                      , split == 0.2.*
                      , template-haskell == 2.10.*
                      , time == 1.5.*
                      , transformers == 0.4.*
  other-modules:        Main
  ghc-options:          -Wall
                        -fno-warn-missing-signatures
                        -fno-warn-name-shadowing
                        -fno-warn-unused-binds
                        -fno-warn-unused-matches

Flag Z3
  description: SMT solver for symbolic evaluator
  default: False

executable f2ji
  default-language:     Haskell2010
  hs-source-dirs:       repl
  main-is:              Main.hs
  other-modules:        Environment History
  build-depends:        fcore
                      , ansi-wl-pprint == 0.6.*
                      , array == 0.5.*
                      , base == 4.*
                      , bytestring == 0.10.*
                      , cmdargs == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , filepath == 1.4.*
                      , haskeline == 0.7.*
                      , language-java == 0.2.*
                      , mtl == 2.2.*
                      , network == 2.6.*
                      , parsec == 3.1.*
                      , pretty == 1.1.*
                      , process == 1.2.*
                      , split == 0.2.*
                      , template-haskell == 2.10.*
                      , time == 1.5.*
                      , transformers == 0.4.*
  ghc-options:          -Wall
                        -fno-warn-missing-signatures
                        -fno-warn-name-shadowing
                        -fno-warn-unused-binds
                        -fno-warn-unused-matches

test-suite test
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       testsuite,testsuite/tests
  main-is:              Test.hs
  other-modules:        SpecHelper TestTerms TransCFSpec TypeCheckSpec
  build-depends:        fcore
                      , base == 4.*
                      , bytestring == 0.10.*
                      , containers == 0.5.*
                      , directory == 1.2.*
                      , filepath == 1.4.*
                      , language-java == 0.2.*
                      , process == 1.2.*
                      , tasty == 0.10.*
                      , tasty-hspec == 1.1
